fixed z-index bug

--- a/css/app.css
+++ b/css/app.css
@@ -1,13 +1,3 @@
-#background:before, #background:after {
-  content: " ";
-  display: table; }
-
-#background:after {
-  clear: both; }
-
-#background {
-  *zoom: 1; }
-
 *, *:before, *:after {
   box-sizing: inherit; }
 
@@ -115,6 +105,7 @@ P {
     padding: 8px; }
 
 #background {
+  z-index: -9999;
   position: fixed;
   top: 0;
   right: 0;
@@ -294,14 +285,13 @@ P {
     padding-bottom: 4%;
     color: #000000;
     background-color: #FFFFFF; }
-
-.about-company {
-  width: 60%;
-  margin: auto;
-  font-size: 20px;
-  line-height: 30px;
-  font-weight: 700;
-  text-align: justify; }
+  #starz-container .about-company {
+    width: 60%;
+    margin: auto;
+    font-size: 20px;
+    line-height: 30px;
+    font-weight: 700;
+    text-align: justify; }
 
 .one-up {
   display: -webkit-flex;
